# Inventory_Management

./: .gitignore  AGENTS.md  README.md  package.json
backend/: Cargo.toml  tauri.conf.json
backend/capabilities/: default.json
backend/src/: inventory_stores.rs  lib.rs  main.rs
backend/src/api/: commands.rs
backend/src/domain/: model.rs
backend/src/integrations/export/: lab_workbook.rs  mod.rs
backend/src/integrations/export/lab_workbook/: columns.rs  formats.rs
backend/src/modules/: mod.rs
backend/src/modules/te_lab_components/: entry_changes.rs  mod.rs  model.rs  mutations.rs  query.rs
backend/src/modules/te_lab_components/storage/: codec.rs  entries.rs  keys.rs  metadata.rs  mod.rs  sync_state.rs  tests.rs
backend/src/modules/te_lab_components/sync/: apply.rs  conflicts.rs  identity.rs  mod.rs  queue.rs  recovery.rs  shared_paths.rs  tests.rs  types.rs
backend/src/modules/te_lab_components/sync/operation_file/: mod.rs  paths.rs
backend/src/modules/te_lab_components/sync/snapshot/: apply.rs  io.rs  lock.rs  publish.rs  types.rs
backend/src/platform/: mod.rs  module_id.rs  shared_root.rs
backend/src/runtime/: shared_sync.rs  shared_watcher.rs
backend/src/sync/: auth.rs  mod.rs  shared_paths.rs  types.rs
backend/tests/: import_flow.rs  live_db_audit.rs  shared_sync_flow.rs  sync_conflict_flow.rs  sync_core.rs
backend/tests/support/: backend.rs
docs/: CHAT_HANDOFF.md  README.md  SESSION_HANDOFF.md  SESSION_START_PROMPT.md
frontend/: index.html
scripts/: desktop-legacy-te-share.ps1  smoke-sync-one-machine.ps1  vite-dev.test.ts
(+135 files in other folders)
