[package]
name = "inventory-management"
version = "0.1.0"
description = "Inventory Management - unified multi-inventory desktop app"
authors = ["Syed Hassaan Shah"]
edition = "2021"

[lib]
name = "inventory_management_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
feoxdb = { version = "0.5.0", default-features = false, features = ["system-alloc"] }
uuid = { version = "1.23.1", features = ["v4"] }
chrono = "0.4.44"
url = "2"
rust_xlsxwriter = "0.94.0"
notify = "8"
calamine = { version = "0.31", features = ["dates"] }
csv = "1.3"
sha2 = "0.10"

[dev-dependencies]
zip = { version = "7.2", default-features = false, features = ["deflate"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.10.1"
